fix layout issues

--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -12,6 +12,3 @@ h1 {
   vertical-align: middle;
 }
 
-.left-sidebar {
-  height: 2000px;
-}
